Added a back button to enable user to move from answer to question Added an add button to for users to add their own questions Added a save button to save questions and answers Added a cancel button to cancel the process of adding a question or answer

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,4 +32,20 @@
         android:textSize= "40sp"
         android:textAlignment="center"/>
 
+    <ImageView
+        android:id="@+id/flashcard_add_button"
+        android:layout_height = "50dp"
+        android:layout_width = "50dp"
+        android:layout_alignParentLeft = "true"
+        android:layout_alignParentBottom = "true"
+        android:src="@drawable/add_icon" />
+
+    <ImageView
+        android:id="@+id/flashcard_cancel_button_main"
+        android:layout_height = "50dp"
+        android:layout_width = "50dp"
+        android:layout_alignParentEnd = "true"
+        android:layout_alignParentBottom = "true"
+        android:src="@drawable/cancel_icon" />
+
 </RelativeLayout>
